--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -3,6 +3,7 @@
 $global-primary-background: #1e87f0 !default;
 $global-secondary-background: #24b662 !default;
 $global-danger-background: #c9302c !default;
+$ss-theme-background: #3bb6d5 !default;
 
 // 2. Import default variables and available mixins.
 @import "~uikit/src/scss/variables-theme.scss";
@@ -14,17 +15,40 @@ $global-danger-background: #c9302c !default;
 // 4. Import UIkit.
 @import "~uikit/src/scss/uikit-theme.scss";
 
+html, body, .ss-height-100 {
+  height: 100%;
+}
+
 body {
-  min-height: 100%;
   overflow-y: scroll;
+}
+
+.ss-tm-baner {
+  display: block;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.ss-banner {
+  height: 100%;
+  width: 100%;
+  background: $ss-theme-background url(/img/swap3.jpg) 50% 50% no-repeat;
+  background-size: cover;
 }
 
 .ss-section-first {
   background: url(/img/background.svg) 50% 10% no-repeat, linear-gradient(to left top, #28a5f5, #1e87f0) 0 0 no-repeat
 }
 
+.ss-theme-book, .ss-section-second {
+  background: $ss-theme-background;
+}
+
+.ss-theme-book {
+  min-height: 680px;
+}
+
 .ss-section-second {
-  background: #3dc0f1;
   color: #fff !important;
 }
 
@@ -41,6 +65,20 @@ body {
   background: #fff !important;
   color: #1e87f0 !important;
 
+  &:hover {
+    box-shadow: 0 10px 40px #1e87f0
+  }
+}
+
+.ss-button-book-group {
+  margin-top: 330px;
+  margin-left: 3%;
+}
+
+.ss-button-book {
+  border-radius: 500px;
+  background: #1e87f0;
+  padding: 0 20px;
   &:hover {
     box-shadow: 0 10px 40px #1e87f0
   }
